--- a/css/kenteken.css
+++ b/css/kenteken.css
@@ -1,8 +1,7 @@
 .gratisKentekenForm{
     background: #ffffff;
     margin: 2em auto;
-    width: 80%;
-
+    width: 60%;
     height: auto;
     padding: 1.6em;
     -webkit-box-shadow: 0 8px 6px -6px black;
@@ -14,11 +13,12 @@
 .kentekenForm{
     text-align: center;
     align-content: center;
+
 }
 
 .kentekenForm label{
     font-size: 0.5em;
-    margin: 0;
+    margin-top: 1em;
     color: #4c4c4d;
     opacity: 0.5;
     float: left;
@@ -27,23 +27,23 @@
 .kentekenForm #kenteken{
     width: 100%;
     border: none;
-    background: yellow;
-    border-left: #1076d0 1.5em solid;
+    background: rgb(255,230,0);
+    border-left: rgb(2,108,225) 1.5em solid;
     text-align: center;
     border-radius: 10px;
     -webkit-box-shadow: 0 8px 6px -3px black;
     -moz-box-shadow: 0 8px 6px -6px black;
     box-shadow: 1px 3px 10px 0 rgba(0,0,0,0.2);
-    font-size: 140%;
+    font-size: 190%;
 }
 
 .kentekenForm #submit_kenteken{
     background: #389141;
     color: white;
+    font-size: 110%;
     padding: 0.4em 0.7em;
-    /*margin-top: 1em;*/
-    margin: 1em;
-    border: none;
+    margin: 2em;
+    border: 1px solid #fff;
     border-radius: 10px;
     -webkit-box-shadow: 0 8px 6px -6px black;
     -moz-box-shadow: 0 8px 6px -6px black;
@@ -62,6 +62,7 @@
 
 .kentekenchecks ul li {
     padding-left: 16px;
+    font-size: 110%;
 }
 
 .kentekenchecks ul li::before {
